--- a/inst/extdata/config.json
+++ b/inst/extdata/config.json
@@ -7,6 +7,6 @@
         "test_parse":"{{key:test_parse}} {{key:test_parse2}}",
         "test_parse2":"@>@ str_replace('{{key:test_parse}}', '2', '00')@<@ {{key:test_parse2}} {{debug2}}",
         "test_parse3":"{{key:test_parse}}",
-        "test_parse4":"@>@ str_replace('@#$%', '#', '!')@<@ @>@ str_replace('{{key:test_parse}}', '2', '00')@<@ {{key:test_parse2}} {{debug2}}"
+        "test_parse4":"@>@ str_replace('{{key:test_parse2}}', '2', '00')@<@ @>@ str_replace('{{key:test_parse}}', '2', '00')@<@ {{key:test_parse2}} {{debug2}}"
     }
 }
