--- a/inst/extdata/config.toml
+++ b/inst/extdata/config.toml
@@ -4,10 +4,14 @@ title = "TOML Example"
 
 [default]
 debug = "{{debug}} {{debug2}}"
+test = "{{samtools@1.3.1:source_dir}}"
 
 [comments]
 version = "0.2.0"
 test_parse = "{{key:test_parse}} {{key:test_parse2}}"
+test_parse2 = "@>@ str_replace('{{key:test_parse}}', '2', '00')@<@ {{key:test_parse2}} {{debug2}}"
+test_parse3 = "{{key:test_parse}}"
+test_parse4 = "@>@ str_replace('{{key:test_parse2}}', '2', '00')@<@ @>@ str_replace('{{key:test_parse}}', '2', '00')@<@ {{key:test_parse2}} {{debug2}}"
 
 [rcmd]
 linux = ["""./configure --enable-R-shlib --prefix={{destdir}} CFLAGS='\
