--- a/inst/extdata/config.ini
+++ b/inst/extdata/config.ini
@@ -20,6 +20,6 @@ raw = #>#echo bash#<#
 parsed = bash
 
 [mulitple_parse]
-raw = @>@str_replace('config','g$','gr')@<@, #>#echo configr#<#, {{key:yes_flag}}, {{yes}}
-parsed = configr, configr, yes, 1
+raw = @>@str_replace('config','g$','gr')@<@, #>#echo configr#<#, {{key:yes_flag}}, {{yes}}, @>@str_replace('configr','r','')@<@, #>#echo config#<#, {{key:no_flag}}, {{no}}
+parsed = configr, configr, yes, 1, config, config, no, 0
 
