--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,6 +17,6 @@ Imports:
     ini (>= 0.2),
     yaml (>= 2.1.3),
     RcppTOML (>= 0.1.1),
-    stringr
+    stringr (>= 1.2.0)
 RoxygenNote: 6.0.1
 Suggests: testthat
