vignettes be added and glue parse be supported

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(parse.extra)
 export(read.config)
 export(write.config)
 import(RcppTOML)
+import(glue)
 import(ini)
 import(jsonlite)
 import(stringr)
