--- a/inst/extdata/config.json
+++ b/inst/extdata/config.json
@@ -23,5 +23,11 @@
   "mulitple_parse": {
     "raw":"@>@str_replace('config','g$','gr')@<@, #>#echo configr#<#, {{key:yes_flag}}, {{yes}}, @>@str_replace('configr','r','')@<@, #># echo config#<#, {{key:no_flag}}, {{no}}",
     "parsed":"configr, configr, yes, 1, config, config, no, 0"
+  },
+  "glue_parse": {
+    "raw_1":"!!glue {1:10}",
+    "parsed_1":["1", "2", "3", "4", "5", "6", "7", "8", "9", "10"],
+    "raw_2":"!!glue_numeric {1:10}",
+    "parsed_2":[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
   }
 }
