--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,15 @@ cache: packages
 
 dist: trusty
 
+env:
+  global:
+    - _R_CHECK_FORCE_SUGGESTS_=false
+
 before_install:
   - curl -OLs http://eddelbuettel.github.io/r-travis/run.sh && chmod 0755 run.sh
   # optionally add our launchpad repo, but not needed here
   # - sudo add-apt-repository -y ppa:edd/misc
-  - Rscript -e 'install.packages(c("covr", "devtools", "roxygen2", "testthat", "jsonlite", "ini", "yaml", "RcppTOML"))'
+  - Rscript -e 'install.packages(c("covr", "devtools", "roxygen2", "testthat", "knitr", "glue", "jsonlite", "ini", "yaml", "RcppTOML"))'
   - ./run.sh bootstrap
 
 install:
