fetch.config be added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(convert.config)
 export(eval.config)
 export(eval.config.merge)
 export(eval.config.sections)
+export(fetch.config)
 export(get.config.type)
 export(is.config.active)
 export(is.configfile.active)
@@ -22,3 +23,4 @@ import(ini)
 import(jsonlite)
 import(stringr)
 import(yaml)
+importFrom(utils,download.file)
