--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: configr
 Type: Package
 Title: An Implementation of Parsing and Writing Configuration File (JSON/INI/YAML/TOML)
-Version: 0.3.1
+Version: 0.3.1.1
 Authors@R: person("Jianfeng", "Li", email = "lee_jianfeng@sjtu.edu.cn", role = c("aut", "cre"))
 Description:
     Implements the JSON, INI, YAML and TOML parser for R setting and writing of configuration file. The functionality of this package is similar to that of package 'config'. 
@@ -18,7 +18,7 @@ Imports:
     yaml (>= 2.1.3),
     RcppTOML (>= 0.1.3),
     stringr (>= 1.2.0),
-    glue
+    glue,
 RoxygenNote: 6.0.1
 Suggests: testthat,
     knitr,
