--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,7 @@ Imports:
     yaml (>= 2.1.3),
     RcppTOML (>= 0.1.3),
     stringr (>= 1.2.0),
-    glue,
+    glue
 RoxygenNote: 6.0.1
 Suggests: testthat,
     knitr,
