--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_install:
   - curl -OLs http://eddelbuettel.github.io/r-travis/run.sh && chmod 0755 run.sh
   # optionally add our launchpad repo, but not needed here
   # - sudo add-apt-repository -y ppa:edd/misc
-  - Rscript -e 'install.packages(c("covr", "devtools", "roxygen2", "testthat", "knitr", "glue", "jsonlite", "ini", "yaml", "RcppTOML"))'
+  - Rscript -e 'install.packages(c("covr", "devtools", "roxygen2", "testthat", "knitr", "glue", "jsonlite", "ini", "yaml", "RcppTOML", "prettydoc"))'
   - ./run.sh bootstrap
 
 install:
